--- a/package.json
+++ b/package.json
@@ -51,10 +51,12 @@
   },
   "devDependencies": {
     "@types/node": "^24.8.1",
+    "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.44",
     "tailwindcss": "^3.4.14",
+    "terser": "^5.44.0",
     "typescript": "^5.6.2",
     "vite": "^5.4.8"
   }
