--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "framer-motion": "^11.2.10",
     "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "lenis": "^1.0.32",
+    "lodash": "^4.17.21",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.452.0",
     "react": "^18.3.1",
@@ -46,18 +48,23 @@
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.160.1",
     "ts-node": "^10.9.2",
+    "vite-plugin-pwa": "^1.1.0",
     "yup": "^1.4.0",
     "zod": "^3.23.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.20",
     "@types/node": "^24.8.1",
     "@types/react-dom": "^19.2.2",
+    "@vitejs/plugin-legacy": "^5.4.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.44",
+    "rollup-plugin-visualizer": "^6.0.5",
     "tailwindcss": "^3.4.14",
     "terser": "^5.44.0",
     "typescript": "^5.6.2",
-    "vite": "^5.4.8"
+    "vite": "^5.4.8",
+    "web-vitals": "^5.1.0"
   }
 }
